# conan-demo

./: .gitignore
libdemo/: CMakeLists.txt
libdemo/src/: demo.cpp
libdemo/tests/: CMakeLists.txt  demo_tests.cpp
pkg/libdemo/: conanfile.py
src/demo-tool/: CMakeLists.txt  conanfile.py
src/demo-tool/src/: main.cpp
src/libdemo/: LICENSE.md  README.md
src/libdemo/include/demo/: demo.hpp
toolchain/cmake/: android.toolchain.cmake
toolchain/conan-profiles/: android-arm64-debug  android-arm64-release  fedora-x86_64-debug  fedora-x86_64-release  ios-arm64-release  ubuntu-arm64-release  win64-vs2019-debug  win64-vs2019-release
